2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* src/Actions.cs:
	* src/PlaylistWindow.cs:

	Make Actions work properly, ie not lock up the app all the time.
	
	* src/About.cs:

	The About subclass didn't work, revert to previous
	ShowWindow stuff- see Ximian Bugzilla #71271

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Fix OnChanged logic.
	
	* src/AddWindow.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	SingalRequest, BooleanBox and DragDropPosition have to be classes,
	not structs!
	We change their properties while they are being passed around.

	Also, don't break out of the changes checking loop when one
	of the songs doesn't have a change ;)

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/muine.schemas.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:

	Remove fake_length and min_query_length gconf crack.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Database.cs:
	* src/Metadata.cs:
	* src/Song.cs:

	Remove pointless CleanStringArray on loading from db. Clean
	the arrays in Metadata itself instead.

	Various other small cleanups and fixes.

2005-01-14  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Metadata.cs:
	
	Making Metadata inherit from GLib.Object was a bad idea.
	Now we just use a private IntPtr for the raw data.	

2005-01-14  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/PlaylistWindow.cs:
	
	Fix a recently added bug that broke the save-playlist-on-exit feature.

2005-01-14  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Metadata.cs:
	
	Code cleanup. Split up the constructor.

2005-01-13  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	
	Moved OnAdded, OnChanged, and OnRemoved from AddWindow into 